fix: spacing and slotchange propagation

--- a/2nd-gen/packages/swc/components/button-group/button-group.css
+++ b/2nd-gen/packages/swc/components/button-group/button-group.css
@@ -19,7 +19,7 @@
 }
 
 .swc-ButtonGroup {
-  --_swc-button-group-gap: var(--swc-button-group-gap, token("spacing-300"));
+  --_swc-button-group-gap: var(--swc-button-group-gap, token("spacing-200"));
 
   display: flex;
   flex-direction: row;
@@ -30,7 +30,7 @@
 }
 
 :host([size="s"]) {
-  --swc-button-group-gap: token("spacing-200");
+  --swc-button-group-gap: token("spacing-100");
 }
 
 :host([orientation="vertical"]) .swc-ButtonGroup {
